# agentic-ai-stress-suite

./: .env  .env.example  .env.k8s.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml.backup  pyproject.toml
.github/workflows/: ci.yml  nightly.yml  release.yml
benchmarks/: benchmark_custom_embeddings.py  benchmark_pytorch_vs_jax.py  compare_frameworks.py  compare_rerankers.py  run_ab_test.py  run_article_01.py  run_article_02.py  run_article_03.py  run_article_04.py  run_article_05.py  run_article_06.py  run_article_07.py  run_article_08.py  run_article_09.py
config/: model_pricing.yaml
datasets/golden_set/: README.md  qa_pairs.json
datasets/red_team_prompts/: red_team_prompts.csv
datasets/synthetic_queries/: article_01.json  article_02.json  article_04.json  article_05.json  article_06.json  validate_queries.py
datasets/tech_docs/: attribution.md
datasets/tech_docs/fastapi/: 01_fastapi_introduction.md  01_introduction.md  02_path_parameters.md  03_query_parameters.md  04_request_body.md  05_dependencies.md  05_dependencies__dependency_injection.md  06_async.md  07_middleware_in_fastapi.md  08_background_tasks_in_fastapi.md  09_testing_fastapi_applications.md  10_security_in_fastapi.md  11_advanced_routing_patterns_in_fastapi.md  12_request_validation_with_pydantic_in_fastapi.md  13_response_models_and_status_codes_in_fastapi.md  14_database_integration_with_sqlalchemy_in_fastapi.md  15_advanced_dependencies_and_dependency_injection_in_fastapi.md  16_websockets_and_serversent_events_in_fastapi.md  17_file_uploads_and_streaming_in_fastapi.md  18_custom_response_classes.md  19_events_startup_and_shutdown.md  20_subapplications_and_mounting.md  21_openapi_customization.md  22_request_validation_error_handling.md  23_cors_configuration_advanced.md  24_websocket_advanced_patterns.md  25_graphql_integration.md  26_serversent_events_sse.md  27_rate_limiting.md  28_caching_strategies.md  29_database_integration_with_sqlalchemy.md  30_mongodb_integration.md  31_redis_integration.md  32_message_queue_integration_rabbitmqkafka.md  33_monitoring_and_logging.md  34_performance_optimization.md  35_api_versioning_strategies.md  36_request_and_response_lifecycle.md  37_advanced_testing_patterns.md  38_load_testing_and_benchmarking.md  (+12 more)
datasets/tech_docs/pdfs/: README.md
datasets/tech_docs/pydantic/: 01_introduction.md  01_introduction_to_pydantic.md  02_basemodel_basics.md  03_field_types_and_validation.md  03_field_types_validation.md  04_string_constraints.md  05_model_inheritance_and_composition.md  06_discriminated_unions.md  07_forward_references_and_recursive_models.md  08_custom_validators.md  09_root_validators.md  10_field_validators.md  11_serialization_and_deserialization.md  12_alias_and_field_aliases.md  13_config_class_options.md  14_json_schema_generation.md  15_generic_models.md  16_dynamic_model_creation.md  17_pydantic_dataclasses.md  18_settings_management.md  19_validation_performance.md  20_strict_mode_and_type_coercion.md  21_custom_field_types.md  22_constrained_types.md  23_annotated_types_and_metadata.md  24_error_handling_and_validationerror.md  25_model_validators_v2.md  25_typeadapter_pattern.md  26_computed_fields.md  27_private_attributes.md  28_model_validation_context.md  29_type_adapter_patterns.md  30_model_copying_and_updating.md  31_excluded_and_included_fields.md  31_pydantic_with_dataframes.md  32_orm_mode_and_arbitrary_types_allowed.md  (+20 more)
datasets/tech_docs_topic_lists/: fastapi_topics_01-50.md  fastapi_topics_18-50.md  pydantic_topics_01-50.md  pydantic_topics_05-50.md  react_topics_01-50.md  react_topics_06-50.md  spring_topics_01-50.md  spring_topics_05-50.md
examples/article_01_state_aware_rag/: README.md  __init__.py  demo_graph_rag.py  demo_naive_rag.py  setup_demo_data.py
examples/article_02_advanced_retrieval/: demo_metadata.py
examples/article_04_single_agent/: demo_plan_execute.py  demo_react.py
examples/article_05_multi_agent/: autogen_research_assistant.py  crewai_implementation.py  demo_critic.py  demo_parallel.py  demo_researcher_writer.py  demo_sequential.py
examples/article_09_dl/: check_environment.py  custom_reranker.py  demo_agent_with_custom_embeddings.py  jax_retriever.py  pytorch_optimizations.py  train_custom_embedder.py
infra/: Dockerfile  chroma-auth.yaml  docker-compose.yml
notebooks/: COLAB_SETUP.md  analysis_article_03.ipynb  analysis_article_04.ipynb  analysis_article_05.ipynb  analysis_article_06.ipynb  analysis_article_07.ipynb  analysis_article_08.ipynb  analysis_article_09.ipynb  cost_dashboard.ipynb
results/: README.md  cost_forecast.csv
results/data/: article_06_benchmarks.json  article_07_benchmarks.json  article_08_benchmarks.json  custom_reranker_benchmark.json  jax_retriever_benchmark.json  pytorch_optimizations.json  pytorch_vs_jax_benchmark.json
results/reports/: v1.0_summary.md
scripts/: cache_admin.py  cache_warmup.py  create_tech_docs_db.py  demo_state_migration.py  diagnose_a02.py  fault_injection.sh  forecast_costs.py  generate_all_charts.sh  generate_queries.py  generate_sample_pdfs.py  generate_tech_docs.py  merge_colab_results.py  migrate_vector_db.py  populate_chroma.py  populate_chroma_in_cluster.sh  prepare_dl_training_data.py  process_pdfs.py  publish_model.py  simulate_drift.py  simulate_tool_failures.py  start_dev_stack.sh  start_phoenix.py  test_k8s_deployment.sh  test_m4_embeddings.py  validate_golden_set.py  validate_queries.py  validate_red_team_prompts.py  validate_tech_docs.py
src/agents/: multi_agent.py  single_agent.py  state_persistence.py
src/core/: benchmarking.py  config.py  cost_logger.py  gpu.py  llm_client.py  observability.py
src/ops/: caching.py  routing.py  security.py
src/rag/: advanced_rag.py  chunking.py  graph_rag.py  hybrid_search.py  metadata_filter.py  naive_rag.py  reranking.py
tests/: conftest.py
tests/fixtures/: CONTAINER_REUSE.md  build_poisoned_corpus.py  containers.py
tests/integration/: README.md  test_observability.py  test_phase1_e2e.py
(+208 files in other folders)
