[project]
name = "agentic-ai-stress-suite"
version = "0.1.0"
description = "Production-grade proof-of-concept demonstrating empirical trade-offs in RAG-to-agent workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Jagdish Salgotra", email = "hello@engnotes.dev"}
]
license = {text = "MIT"}
keywords = ["rag", "agents", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # HTTP clients
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # LLM Frameworks
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    # LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    # Vector DBs
    "chromadb>=0.4.0",
    # Tokenizers and utilities
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    # Redis
    "redis>=5.0.0",
    # Observability
    "arize-phoenix>=3.0.0",
    # Utils
    "tenacity>=8.2.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",

    # Type checking
    "mypy>=1.7.0",
    "types-redis",

    # Linting/Formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",

    # Pre-commit
    "pre-commit>=3.5.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.core.config", "src.core.llm_client", "src.rag.*"]
warn_return_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
