[project]
name = "agentic-ai-stress-suite"
version = "0.1.0"
description = "Production-grade proof-of-concept demonstrating empirical trade-offs in RAG-to-agent workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Jagdish Salgotra", email = "hello@engnotes.dev"}
]
license = {text = "MIT"}
keywords = ["rag", "agents", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # HTTP clients
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    # LLM Frameworks
    "llama-index>=0.10.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "langchain>=0.1.0",
    "langgraph>=0.1.0",
    # LLM APIs
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    # Vector DBs
    "chromadb>=0.4.0",
    # Tokenizers and utilities
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    # Redis
    "redis>=5.0.0",
    # Observability
    "arize-phoenix>=3.0.0",
    # Utils
    "tenacity>=8.2.0",
    "networkx>=3.6.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    # BM25 for hybrid search
    "rank-bm25>=0.2.2",
    # Haystack for framework comparison
    "haystack-ai>=2.0.0",
    "chroma-haystack>=0.18.0",
    "markdown-it-py>=3.0.0",
    "mdit-plain>=1.0.1",
    # Reranking
    "flashrank>=0.2.0",
    "cohere>=5.0.0",
    # PDF processing
    "pymupdf>=1.24.0",
    # Evaluation
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
    "scipy>=1.11.0",
    "ddgs>=1.0.0",
    "nbconvert>=7.16.6",
    "ipykernel>=7.1.0",
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "langchain-groq>=1.1.2",
    "pyautogen>=0.10.0",
    "litellm>=1.81.13",
    "langfuse>=3.14.2",
    "nemoguardrails>=0.20.0",
    "spacy>=3.8.11",
    "en-core-web-sm",
    "locust>=2.43.3",
    "qdrant-client>=1.16.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.11",
    "jax>=0.9.0.1",
    "datasets>=4.5.0",
    "accelerate>=1.12.0",
]

[project.optional-dependencies]
dev = [
    # PDF generation for test datasets
    "fpdf2>=2.7.0",

    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers>=4.0.0",

    # Type checking
    "mypy>=1.7.0",
    "types-redis",
    "types-PyYAML",

    # Linting/Formatting
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",

    # Pre-commit
    "pre-commit>=3.5.0",

    # Jupyter
    "jupyter>=1.0.0",
    "ipykernel>=6.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# CLI entry-point scripts and benchmark runners do sys.path bootstrap
# before local imports (E402) and embed long generation prompts (E501).
# These conventions are intentional for runnable scripts; the rules
# remain strict for src/ and tests/.
"scripts/*.py" = ["E402", "E501", "F841"]
"benchmarks/*.py" = ["E402", "E501", "F841"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.core.config", "src.core.llm_client", "src.rag.*"]
warn_return_any = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = ["."]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
    "testcontainers>=4.14.0",
    "types-PyYAML>=6.0.0",
    "vcrpy>=8.1.1",
]
